--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".StudentsListActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".StudentDetailsActivity"
             android:exported="true">
         </activity>
