--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".AddStudentActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".StudentDetailsActivity"
             android:exported="true">
         </activity>
